IE spacing fix

--- a/gitb-ui/ui/src/app/components/session-table/session-table.component.less
+++ b/gitb-ui/ui/src/app/components/session-table/session-table.component.less
@@ -1,5 +1,7 @@
 .sessionControls {
     margin-top: 15px;
     margin-left: -5px;
-    margin-bottom: 20px;
+    button {
+        margin-bottom: 12px; // Applied here for IE11.
+    }
 }
