--- a/gitb-ui/ui/src/app/pages/admin/conformance-dashboard/conformance-dashboard.component.less
+++ b/gitb-ui/ui/src/app/pages/admin/conformance-dashboard/conformance-dashboard.component.less
@@ -3,7 +3,9 @@
 .statementControls {
     margin-top: 15px;
     margin-left: -5px;
-    margin-bottom: 20px;
+    button {
+        margin-bottom: 12px; // Applied here for IE11.
+    }
 }
 .testCaseContainer {
     border: 1px solid @gray-dark-1
